# jovyan

./: .gitignore  IEEE_NIDS_Report.aux  IEEE_NIDS_Report.tex
Work/: cic-ids-multi-class-attack-classification-using-gb.ipynb  ieee_nids_combined_report.aux  ieee_nids_combined_report.bbl  ieee_nids_combined_report.blg  ieee_nids_combined_report.out  ieee_nids_combined_report.tex  ieee_nids_notebooks_grounded_refs.bib  ieee_nids_notebooks_grounded_report.aux  ieee_nids_notebooks_grounded_report.bbl  ieee_nids_notebooks_grounded_report.blg  ieee_nids_notebooks_grounded_report.out  ieee_nids_notebooks_grounded_report.tex  ieee_nids_refs.bib  ieee_nids_report (1).docx  ieee_nids_report.aux  ieee_nids_report.bbl  ieee_nids_report.blg  ieee_nids_report.out  ieee_nids_report.tex  ieee_nids_report_from_docx.aux  ieee_nids_report_from_docx.tex
Work/.ipynb_checkpoints/: cic-ids-multi-class-attack-classification-using-gb-checkpoint.ipynb
ddos_detector/: .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RUN_WINDOWS.md  alerts.py  capture.py  detector.py  docker-compose.yml  export_model.py  flow_builder.py  flows_log.csv  main.py  pyproject.toml  requirements.txt  train_from_parquet.py  windows_smoke_test.pcap
ddos_detector/logs/: .gitkeep
ddos_detector/model/: features.json  label_encoder.pkl  lgbm_binary_model.pkl
